<resources>
    <string name="app_name">Bangkit Story</string>
    <string name="bangkit_logo">Bangkit Logo</string>
    <string name="welcome">Welcome to Bangkit Story</string>
    <string name="login_subtitle">Please login to continue</string>
    <string name="register_subtitle">Please register to continue</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_attention">Don\'t have an account yet?</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="date">April 9, 2022</string>
    <string name="description">Description</string>
    <string name="story_photo">Story photo</string>
    <string name="add_story">Add new story</string>
    <string name="settings">Settings</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="add_new_story">New Bangkit Story</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="package_name">com.bangkit.story</string>
    <string name="photo">photo</string>
    <string name="login_illustration">Login illustration</string>
    <string name="register_illustration">Register illustration</string>
    <string name="language">Language</string>
    <string name="appwidget_text">Bangkit Story</string>
    <string name="empty_text">No data. Please login first</string>
    <string name="retry">Retry</string>
    <string name="maps">Maps</string>
    <string name="loc_stories">Stories Location</string>
    <string name="sort">Sort</string>
    <string name="with_location">With Location</string>
    <string name="without_location">Without Location</string>

    <!-- Toast messages -->
    <string name="login_success">Login Successfully</string>
    <string name="name_required_error">Name is required</string>
    <string name="email_required_error">Email is required</string>
    <string name="description_required_error">Description is required</string>
    <string name="email_invalid_error">Invalid email format</string>
    <string name="password_required_error">Password is required</string>
    <string name="password_length_error">Password must at least 6 characters</string>
    <string name="password_white_space_error">Password must not contain white spaces</string>
    <string name="password_upper_case_error">Password must contain one upper case letter</string>
    <string name="password_lower_case_error">Password must contain one lower case letter</string>
    <string name="password_number_error">Password must contain one digit number</string>
    <string name="image_required_error">Please add your image</string>
    <string name="permission_error">Failed to get permission</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Bangkit Story Widget</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="loc_not_found">Location is not found. Try Again</string>
    <string name="form_empty">Please fill the form</string>
</resources>