<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.NewStoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/previewImageView"
            android:layout_width="match_parent"
            android:layout_height="430dp"
            android:background="#d0d0d0"
            android:contentDescription="@string/story_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/blank_image"
            tools:ignore="ImageContrastCheck" />

        <ImageButton
            android:id="@+id/galleryButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_corner"
            android:contentDescription="@string/gallery"
            android:minHeight="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/previewImageView"
            app:layout_constraintStart_toEndOf="@+id/cameraButton"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_baseline_image_24"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/round_corner"
            android:contentDescription="@string/camera"
            android:minHeight="40dp"
            app:layout_constraintBottom_toBottomOf="@+id/galleryButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/galleryButton"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_baseline_photo_camera_24"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/previewImageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="8"
                tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/uploadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:stateListAnimator="@null"
            android:text="@string/upload"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck" />

        <ProgressBar
            android:id="@+id/loadingUpload"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/uploadButton"
            app:layout_constraintEnd_toEndOf="@+id/uploadButton"
            app:layout_constraintStart_toStartOf="@+id/uploadButton"
            app:layout_constraintTop_toTopOf="@+id/uploadButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>